vivaldi: fix blurry tab titles

--- a/vivaldi/custom.css
+++ b/vivaldi/custom.css
@@ -148,20 +148,31 @@
 	}
 }
 
-/* fix blurry tabs until vivaldi-stable 7.1 */
-#tabs-container .tab .title {
-    /* -webkit-font-smoothing: antialiased; */
-    /* text-rendering: optimizeLegibility; */
-    backface-visibility: hidden;
-    /* transform: translateZ(0); */
+/* fix blurry tabs since vivaldi-stable 7.0 */
+.linux .tab-strip .tab .title {
+    mask: inherit !important;
+	display: flex !important;
+    height: unset !important;
+    line-height: 1.3 !important;
+
+	backface-visibility: hidden !important;
+	will-change: contents;
+	text-rendering: auto;
+
+	/* just in case */
+	mask-image: -webkit-linear-gradient(180deg, transparent 0, #fff 12px) !important;
+	mask-position: top right !important;
+}
+.tab-position {
+	will-change: auto;
 }
 
 #browser.linux #tabs-container {
 	font-family: system-ui, 'Noto Sans', Cantarell, sans-serif;
 	/* font-family: "Lexica Ultralegible", "Atkinson Hyperlegible", Helvetica, Arial, sans-serif; */
 	/* font-family: "Lexica Ultralegible", "Atkinson Hyperlegible", system-ui, 'Noto Sans', Cantarell, Helvetica, Arial, sans-serif; */
-	font-size: 100%;
-	font-weight: 400;
+	/* font-size: 100%; */
+	/* font-weight: 400; */
 	/* font-variant-numeric: slashed-zero; */
 	/* font-variant-ligatures: no-common-ligatures; */
 }
